# FilamentHub

./: .dockerignore  .env.example  Dockerfile  Dockerfile.combined  LICENSE  README.md  alembic.ini  docker-compose.hub.yml  docker-compose.selfhost.yml  docker-compose.yml  filamenthub.xml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_spool_extra_colors.py  0003_auth_tokens.py  0004_alert_fired.py  0005_user_discord_webhook.py  0006_webhooks.py  0007_user_notification_prefs.py  0008_user_ui_prefs.py  0009_system_config.py  0010_user_integration_configs.py  0011_system_config_allow_registration.py  0012_printers_serial_direct_spool.py  0013_spool_color_hex.py  0014_user_approval.py  0015_add_operator_role.py  0016_location_printer_link.py  0017_print_job_enhancements.py  0018_projects.py  0019_project_fields.py  0020_project_plate_comments.py  0021_filament_profile_photo.py  0022_spool_material_type.py  0023_spool_material_override.py
app/: __init__.py  main.py
app/core/: config.py  email.py  notifications.py  rate_limit.py  scheduler.py  security.py
app/db/: session.py
app/models/: models.py
app/schemas/: schemas.py
docker/: supervisord.conf
frontend/: Dockerfile.prod  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
nginx/: nginx-selfhost.conf  nginx.conf
scripts/: fetch_3dfp.py
temp_files/: all Oreo.3mf  filament-sunlu-pc-abs-Basic-Black.aml
templates/: filamenthub.xml
tests/: test_api.py
(+123 files in other folders)
